# fastapi-agent

./: .gitignore  README.md  pyproject.toml
src/output_test/: crew.py  main.py
src/output_test/config/: tasks.yaml
