[project]
name = "output_test"
version = "0.1.0"
description = "output_test using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
output_test = "output_test.main:run"
run_crew = "output_test.main:run"
train = "output_test.main:train"
replay = "output_test.main:replay"
test = "output_test.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
