[tool.poetry]
name = "output_test"
version = "0.1.0"
description = "output_test using crewAI"
authors = ["Hassan <you@example.com>"]
packages = [{include = "src/output_test"}]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
crewai = {extras = ["tools"], version = ">=0.86.0,<1.0.0"}
fastapi = "^0.100.0"
uvicorn = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

